{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 620,
  "lineage": "41fe2561-8e7c-6c13-de28-cd8373a40ad1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vault-ip-addresses",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "35.195.214.180",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-04-30T06:15:56.110-07:00",
            "id": "projects/starfly/regions/europe-west1/addresses/vault-ip-0",
            "name": "vault-ip-0",
            "network_tier": "PREMIUM",
            "project": "starfly",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/starfly/regions/europe-west1/addresses/vault-ip-0"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "34.77.216.158",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-04-30T06:15:56.115-07:00",
            "id": "projects/starfly/regions/europe-west1/addresses/vault-ip-1",
            "name": "vault-ip-1",
            "network_tier": "PREMIUM",
            "project": "starfly",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/starfly/regions/europe-west1/addresses/vault-ip-1"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address": "35.240.30.57",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-04-30T06:15:56.106-07:00",
            "id": "projects/starfly/regions/europe-west1/addresses/vault-ip-2",
            "name": "vault-ip-2",
            "network_tier": "PREMIUM",
            "project": "starfly",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/starfly/regions/europe-west1/addresses/vault-ip-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-inbound-nginx",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-30T06:15:55.991-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/starfly/global/firewalls/allow-inbound-nginx",
            "name": "allow-inbound-nginx",
            "network": "https://www.googleapis.com/compute/v1/projects/starfly/global/networks/default",
            "priority": 1000,
            "project": "starfly",
            "self_link": "https://www.googleapis.com/compute/v1/projects/starfly/global/firewalls/allow-inbound-nginx",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "vault"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-inbound-vault-api",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8200"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-30T06:15:55.993-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/starfly/global/firewalls/allow-inbound-vault-api",
            "name": "allow-inbound-vault-api",
            "network": "https://www.googleapis.com/compute/v1/projects/starfly/global/networks/default",
            "priority": 1000,
            "project": "starfly",
            "self_link": "https://www.googleapis.com/compute/v1/projects/starfly/global/firewalls/allow-inbound-vault-api",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "vault"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-vault-2-vault",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8201"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-30T06:15:55.961-07:00",
            "deny": [],
            "description": "allow internal vault traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/starfly/global/firewalls/allow-vault-2-vault",
            "name": "allow-vault-2-vault",
            "network": "https://www.googleapis.com/compute/v1/projects/starfly/global/networks/default",
            "priority": 1000,
            "project": "starfly",
            "self_link": "https://www.googleapis.com/compute/v1/projects/starfly/global/firewalls/allow-vault-2-vault",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "vault"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "vault"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vault",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200420",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/starfly/zones/europe-west1-c/disks/prod-vault-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/starfly/zones/europe-west1-c/instances/prod-vault-0",
            "instance_id": "2810770851421974861",
            "label_fingerprint": "ac4oj9Lzdm8=",
            "labels": {
              "auth": "yes"
            },
            "machine_type": "n1-standard-1",
            "metadata": {
              "sshKeys": "gauthierdonikian:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILBd8AerMuCVlT1ERPifxLdJ4ctQATQX6XMrzpQLK1kf master@starfly.fr",
              "startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python dnsutils libcap2-bin"
            },
            "metadata_fingerprint": "gYqKW0AHWR0=",
            "name": "prod-vault-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.195.214.180",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/starfly/global/networks/default",
                "network_ip": "10.132.0.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/starfly/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "starfly"
              }
            ],
            "project": "starfly",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/starfly/zones/europe-west1-c/instances/prod-vault-0",
            "service_account": [
              {
                "email": "929418460963-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "vault"
            ],
            "tags_fingerprint": "8O4RdzWX7JU=",
            "zone": "europe-west1-c"
          },
          "dependencies": [
            "google_compute_address.vault-ip-addresses"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200420",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/starfly/zones/europe-west1-c/disks/prod-vault-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/starfly/zones/europe-west1-c/instances/prod-vault-1",
            "instance_id": "364965638399553868",
            "label_fingerprint": "ac4oj9Lzdm8=",
            "labels": {
              "auth": "yes"
            },
            "machine_type": "n1-standard-1",
            "metadata": {
              "sshKeys": "gauthierdonikian:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILBd8AerMuCVlT1ERPifxLdJ4ctQATQX6XMrzpQLK1kf master@starfly.fr",
              "startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python dnsutils libcap2-bin"
            },
            "metadata_fingerprint": "gYqKW0AHWR0=",
            "name": "prod-vault-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.216.158",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/starfly/global/networks/default",
                "network_ip": "10.132.0.7",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/starfly/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "starfly"
              }
            ],
            "project": "starfly",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/starfly/zones/europe-west1-c/instances/prod-vault-1",
            "service_account": [
              {
                "email": "929418460963-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "vault"
            ],
            "tags_fingerprint": "8O4RdzWX7JU=",
            "zone": "europe-west1-c"
          },
          "dependencies": [
            "google_compute_address.vault-ip-addresses"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200420",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/starfly/zones/europe-west1-c/disks/prod-vault-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/starfly/zones/europe-west1-c/instances/prod-vault-2",
            "instance_id": "8917534474485854541",
            "label_fingerprint": "ac4oj9Lzdm8=",
            "labels": {
              "auth": "yes"
            },
            "machine_type": "n1-standard-1",
            "metadata": {
              "sshKeys": "gauthierdonikian:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILBd8AerMuCVlT1ERPifxLdJ4ctQATQX6XMrzpQLK1kf master@starfly.fr",
              "startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python dnsutils libcap2-bin"
            },
            "metadata_fingerprint": "gYqKW0AHWR0=",
            "name": "prod-vault-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.240.30.57",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/starfly/global/networks/default",
                "network_ip": "10.132.0.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/starfly/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "starfly"
              }
            ],
            "project": "starfly",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/starfly/zones/europe-west1-c/instances/prod-vault-2",
            "service_account": [
              {
                "email": "929418460963-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "vault"
            ],
            "tags_fingerprint": "8O4RdzWX7JU=",
            "zone": "europe-west1-c"
          },
          "dependencies": [
            "google_compute_address.vault-ip-addresses"
          ]
        }
      ]
    }
  ]
}